2015-09-18  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18981]
	* sysdeps/i386/fpu/i386-math-asm.h: New file.
	* sysdeps/i386/fpu/e_scalb.S: Include <i386-math-asm.h>.
	(__ieee754_scalb): Use DBL_NARROW_EVAL.
	* sysdeps/i386/fpu/e_scalbf.S: Include <i386-math-asm.h>.
	(__ieee754_scalbf): Use FLT_NARROW_EVAL.
	* sysdeps/i386/fpu/s_scalbn.S: Include <i386-math-asm.h>.
	(__scalbn): Use DBL_NARROW_EVAL.
	* sysdeps/i386/fpu/s_scalbnf.S: Include <i386-math-asm.h>.
	(__scalbnf): Use FLT_NARROW_EVAL.

2015-09-18  Wilco Dijkstra  <wdijkstr@arm.com>

	* math/w_tgamma.c (__ieee754_gamma_r): Use explicit sign check.
	* math/w_tgammaf.c (__ieee754_gammaf_r): Likewise.
	* math/w_tgammal.c (__ieee754_gammal_r): Likewise.
	* stdio-common/printf_fp.c (___printf_fp):
	Use signbit to get the sign. Use isinf macro to allow inlining.
	* stdio-common/printf_fphex.c (__printf_fphex): Likewise.
	* stdio-common/printf_size.c (__printf_size): Likewise.

2015-09-18  Mike Frysinger  <vapier@gentoo.org>

	* timezone/Makefile ($(testdata)/XT%): Call $(make-target-directory).

2015-09-18  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18980]
	* sysdeps/generic/math_private.h: Include <float.h>.
	(math_narrow_eval): New macro.
	[FLT_EVAL_METHOD != 0] (excess_precision): Likewise.
	* sysdeps/ieee754/dbl-64/e_cosh.c (__ieee754_cosh): Use
	math_narrow_eval on overflowing return value.
	* sysdeps/ieee754/dbl-64/e_lgamma_r.c (__ieee754_lgamma_r):
	Likewise.
	* sysdeps/ieee754/dbl-64/e_sinh.c (__ieee754_sinh): Likewise.
	* sysdeps/ieee754/flt-32/e_coshf.c (__ieee754_coshf): Likewise.
	* sysdeps/ieee754/flt-32/e_lgammaf_r.c (__ieee754_lgammaf_r):
	Likewise.
	* sysdeps/ieee754/flt-32/e_sinhf.c (__ieee754_sinhf): Likewise.

2015-09-18  Wilco Dijkstra  <wdijkstr@arm.com>

	* include/math.h: Remove __isinf_ns, __isinf_nsf, __isinf_nsl.
	* math/Makefile: Remove isinf_ns.c.
	* math/divtc3.c (__divtc3): Replace __isinf_nsl with isinf.
	* math/multc3.c (__multc3): Likewise.